Added persistent, continuous toaster to using the app without signing up.

--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -90,6 +90,10 @@ h2 {
   font-size: @size-font-large;
 }
 
+.width-small h2.long{
+  font-size: @size-font-not-so-large;
+}
+
 .textgroup-toaster {
   .text-medium();
 }
