Workaround links not blinking during onboarding because of Chrome bug 506898. https://code.google.com/p/chromium/issues/detail?id=506898

--- a/frontend/app/src/static/less/animations.less
+++ b/frontend/app/src/static/less/animations.less
@@ -875,7 +875,7 @@ input[type="checkbox"]:checked + label:before {
   100%   { color: @color-text-inverse; }
 }
 
-a.link-menu.onboarding:not(.highlighted) span {
+.link-menu.onboarding:not(.highlighted) span {
   -webkit-animation: onboarding-menu-pulse ease-in-out 3.5s infinite;
   -moz-animation:    onboarding-menu-pulse ease-in-out 3.5s infinite;
   -o-animation:      onboarding-menu-pulse ease-in-out 3.5s infinite;
