Fixed note editor onboarding on and inline blinking text

--- a/frontend/app/src/static/less/layout.less
+++ b/frontend/app/src/static/less/layout.less
@@ -748,7 +748,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 //    NOTE: Star icon height is a combination of @size-icon-star-small and line-height: @grid-vertical-half.
 .group-mixed {
   .group-mixed--middle {
-    & > a:not(.link-inline), & > .clickable:not(.link-inline), {
+    & > a:not(.link-inline), & > .clickable:not(.link-inline) {
       display: block;                               // [2]
       padding-top: inherit;    // [2]
       margin-top: -@padding-vertically-centered;    // [2]
