--- a/frontend/app/src/static/less/layout.less
+++ b/frontend/app/src/static/less/layout.less
@@ -185,7 +185,11 @@ Menu
 // 1. In one-column layout, anchor to menu element in JavaScript.
 @media (max-width: (@width-column-max - 1px)) {
   .container-modal--outer.anchor-to-menu-element {
-    transform: none;  // [1]
+    -webkit-transform: none;  // [1]
+    -moz-transform: none;     // [1]
+    -o-transform: none;       // [1]
+    -ms-transform: none;      // [1]
+    transform: none;          // [1]
     top: 0;           // [1]
     left: 0;          // [1]
     right: 0;         // [1]
