Partially working setting of parent to keyword or context

--- a/frontend/app/src/static/less/icons.less
+++ b/frontend/app/src/static/less/icons.less
@@ -14,6 +14,7 @@ TODO: Icons are not working yet with Phytoplankton
 @size-icon-plus: 25px;
 @size-icon-toggle-completed: 11px;
 @size-icon-arrow-small: 11px;
+@size-icon-arrow-smallest: 8px;
 @size-icon-arrow-large: 16px;
 @size-icon-convert: 11px;
 @size-icon-convert-large: 15px;
