--- a/frontend/app/src/static/less/widgets.less
+++ b/frontend/app/src/static/less/widgets.less
@@ -94,6 +94,12 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 # Keywords
 */
 
+
+// Visible keyword list, needs to be inline to avoid line breaks
+.keyword-list-wrapper{
+  display: inline-block;
+}
+
 // 1. Set display to inline-block so that .keywords-container has some height.
 .keywords-container {
   width: 100%;
