Added sorting of contexts and keywords alphabetically using parent, same way as lists

--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -362,6 +362,7 @@ Keywords
   color: @color-text;
   font-size: @size-icon-arrow-smallest;
   padding-left: @width-arrow-text-gap;
+  padding-right: @width-arrow-text-gap;
   vertical-align: middle;
 }
 
