--- a/backend/src/main/resources/templates/shareList.html
+++ b/backend/src/main/resources/templates/shareList.html
@@ -14,7 +14,7 @@
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
-          <p>find below a link join the list <i>sharedListTitle</i> inviterEmail shared with you</p>
+          <p>find below a link to join the list <i>sharedListTitle</i> proposedByDisplayName shared with you</p>
         </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
